add swagger.json
